# python-activerecord-testsuite

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXAMPLE_NEW_BACKEND_FEATURES.md  GEMINI.md  LICENSE  MANIFEST.in  MIGRATION_FEATURE_SUPPORT.md  MUST_FOLLOW.md  PLUGIN_USAGE.md  QWEN.md  README.md  SUMMARY_FEATURE_SUPPORT.md  backends.yml  migration_plan.md  pyproject.toml  runnable_testsuite_plan.md  setup.py  temp_testsuite_files.txt
.assistant/: coding_conventions.md  memory.md  tool_usage.md
.github/workflows/: changelog-check.yml  ci.yml  publish.yml
changelog.d/: 1.added.md  README.md  template.md
docs/: README.md  plan.md
docs/en_US/: CI_CD.md  IDE_INTEGRATION.md  README.md  THIRD_PARTY_BACKENDS.md  TROUBLESHOOTING.md  configuration.md  contributing.md  running_tests.md
docs/plan/: README.md  benchmark_aggregate_queries.md  benchmark_bulk_delete.md  benchmark_bulk_insert.md  benchmark_bulk_update.md  benchmark_cache_impl.md  benchmark_complex_queries.md  benchmark_concurrent_tx_impl.md  benchmark_connection_pool_impl.md  benchmark_eager_loading_impl.md  benchmark_join_queries.md  benchmark_large_results_impl.md  benchmark_n_plus_one_impl.md  benchmark_polymorphic_impl.md  benchmark_simple_queries.md  benchmark_transaction_overhead_impl.md  cms_content_moderation.md  cms_content_publishing.md  cms_version_control.md  ecommerce_customer_purchase.md  ecommerce_inventory_mgmt.md  ecommerce_order_fulfillment.md  ecommerce_reviews.md  finance_account_operations.md  finance_audit_impl.md  finance_budget_impl.md  finance_transfers_impl.md  project_collaboration.md  project_planning.md  project_time_tracking.md  social_activity_feed.md  social_graph.md  social_messaging.md  test_implementation_summary.md
docs/zh_CN/: CI_CD.md  IDE_INTEGRATION.md  README.md  THIRD_PARTY_BACKENDS.md  TROUBLESHOOTING.md  configuration.md  contributing.md  running_tests.md
docs/zh_CN/changes/: 2025-09-06_fix_testsuite_execution.md
src/rhosocial/activerecord/: __init__.py
src/rhosocial/activerecord/testsuite/: __init__.py  config.py  conftest.py  plan.md  utils.py
src/rhosocial/activerecord/testsuite/benchmark/: README.md
src/rhosocial/activerecord/testsuite/core/: __init__.py  registry.py
src/rhosocial/activerecord/testsuite/feature/: FEATURE_SUPPORT_DESIGN.md  FEATURE_SUPPORT_USAGE.md  MIGRATION_GUIDE.md  README.md  __init__.py  features.py  test_capability_integration.py  test_features.py  utils.py
src/rhosocial/activerecord/testsuite/feature/backend/: sqlite_features.py
src/rhosocial/activerecord/testsuite/feature/basic/: __init__.py  conftest.py  interfaces.py  test_crud.py  test_fields.py  test_validation.py
src/rhosocial/activerecord/testsuite/feature/basic/fixtures/: __init__.py  models.py
src/rhosocial/activerecord/testsuite/feature/basic/schemas/: basic.sql
src/rhosocial/activerecord/testsuite/feature/events/: __init__.py  conftest.py  interfaces.py  test_handlers.py  test_lifecycle.py
src/rhosocial/activerecord/testsuite/feature/events/fixtures/: __init__.py  models.py
src/rhosocial/activerecord/testsuite/feature/examples/: __init__.py  capability_usage_example.py
src/rhosocial/activerecord/testsuite/feature/interface/: conftest.py  test_threadsafe_dict.py
src/rhosocial/activerecord/testsuite/feature/mixins/: __init__.py  conftest.py  interfaces.py  test_combined_articles.py  test_optimistic_lock.py  test_soft_delete.py  test_timestamps.py
src/rhosocial/activerecord/testsuite/feature/mixins/fixtures/: __init__.py  models.py
src/rhosocial/activerecord/testsuite/feature/query/: __init__.py  conftest.py  interfaces.py  test_advanced_grouping.py  test_advanced_grouping_with_features.py  test_basic.py  test_case_expressions.py  test_conditions.py  test_cte_advanced_aggregate.py  test_cte_aggregate.py  test_cte_basic.py  test_cte_integration.py  test_cte_integration_2.py  test_cte_recursive.py  test_cte_relation.py  test_cte_relation_2.py  test_cte_support.py  test_cte_window.py  test_dict_query.py  test_expression.py  test_function_expressions.py  test_grouped_aggregate.py  test_joins.py  test_joins_2.py  test_relation_cache.py  test_relation_path_processing.py  test_relations_basic.py  test_relations_complex.py  test_relations_with.py  test_relations_with_query.py  test_scalar_aggregate.py  test_window_functions.py  test_window_functions_with_features.py
src/rhosocial/activerecord/testsuite/feature/query/fixtures/: cte_models.py  extended_models.py  models.py
src/rhosocial/activerecord/testsuite/feature/relation/: conftest.py  interfaces.py  test_base.py  test_cache.py  test_descriptors.py  test_interfaces.py  test_nested_relationship_access.py
src/rhosocial/activerecord/testsuite/feature/relation/fixtures/: models.py
src/rhosocial/activerecord/testsuite/plugin/: __init__.py  pytest_activerecord_capabilities.py
src/rhosocial/activerecord/testsuite/realworld/: README.md
src/rhosocial/activerecord/testsuite/utils/: helpers.py
