# pyproject.toml
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rhosocial-activerecord-testsuite"
version = "1.0.0.dev2"
description = "A standardized test suite for rhosocial-activerecord backends, providing contracts for features, real-world scenarios, and benchmarks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
    { name = "vistart", email = "i@vistart.me" }
]
keywords = ["testsuite", "activerecord", "orm", "database", "pytest", "rhosocial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
]

dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
# Development dependencies
test = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-rerunfailures>=15.0",
]

dev = [
    "towncrier>=23.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/rhosocial/python-activerecord-testsuite"
Documentation = "https://docs.python-activerecord.dev.rho.social/"
Repository = "https://github.com/rhosocial/python-activerecord-testsuite.git"
Issues = "https://github.com/rhosocial/python-activerecord-testsuite/issues"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/rhosocial/activerecord/testsuite"]

addopts = "-ra -q"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    # Capability requirement markers
    "requires_capability: marks tests requiring specific backend capabilities",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '''\.pyi?$'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B"]
ignore = []

[project.entry-points."pytest11"]
rhosocial-activerecord-capabilities = "rhosocial.activerecord.testsuite.plugin.pytest_activerecord_capabilities"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "rhosocial.activerecord.testsuite.*"
ignore_missing_imports = false

[tool.towncrier]
package = "rhosocial.activerecord.testsuite"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
template = "changelog.d/template.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/rhosocial/python-activerecord-testsuite/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

# Explicitly include namespace packages
[tool.setuptools.package-data]
"rhosocial" = ["py.typed"]
"rhosocial.activerecord" = ["py.typed"]

# ===== Editable Install Configuration =====
# This is the key to making IDE work properly in dev mode
[tool.setuptools]
# Use modern editable install mode that properly supports namespace packages
# Options: "strict" (PEP 660 compliant) or "compat" (legacy compatibility)
# "strict" mode creates proper .pth files that work with IDEs
zip-safe = false

[tool.setuptools.dynamic]
# If you want version from git tags, use setuptools-scm
# version = {attr = "setuptools_scm.get_version"}
